ajustment cruds
