# src/app/features/acquisition-channels/acquisition-channels.routes.ts
@@ -1,0 +1,9 @@
+import { Routes } from '@angular/router';
+
+export const acquisitionChannelsRoutes: Routes = [
+  {
+    path: '',
+    loadComponent: () =>
+      import('./acquisition-channels.component').then((m) => m.AcquisitionChannelsComponent),
+  },
+];
