# src/app/features/tenants/tenants.routes.ts
@@ -1,0 +1,8 @@
+import { Routes } from '@angular/router';
+
+export const tenantsRoutes: Routes = [
+  {
+    path: '',
+    loadComponent: () => import('./tenants.component').then((m) => m.TenantsComponent),
+  },
+];
